반응형 scss 변수 추가

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,8 @@
 @import 'reset';
+@import 'variable';
 
 body {
-	background: pink;
+	background: var(--color1);
 
 	section {
 		width: 600px;
@@ -12,7 +13,7 @@ body {
 
 		h1 {
 			font: bold 50px/1 'arial';
-			color: pink;
+			color: var(--color1);
 			margin-bottom: 40px;
 		}
 
@@ -23,7 +24,7 @@ body {
 		a {
 			display: inline-block;
 			padding: 5px 20px;
-			background: pink;
+			background: var(--color1);
 			font: bold 14px/1 'arial';
 			color: #fff;
 		}
@@ -34,17 +35,17 @@ body {
 //모바일 디바이스는 폭이 매우 다양하기 때문에 width 값은 퍼센테이지로 처리
 @media screen and (max-width: 999px) {
 	body {
-		background: lightblue;
+		background: var(--color2);
 
 		section {
 			width: 80%;
 
 			h1 {
-				color: lightblue;
+				color: var(--color2);
 			}
 
 			a {
-				background: lightblue;
+				background: var(--color2);
 			}
 		}
 	}
@@ -52,15 +53,15 @@ body {
 
 @media screen and (max-width: 599px) {
 	body {
-		background: orange;
+		background: var(--color3);
 
 		section {
 			h1 {
-				color: orange;
+				color: var(--color3);
 			}
 
 			a {
-				background: orange;
+				background: var(--color3);
 			}
 		}
 	}
